# mondrians

./: .gitignore  Cargo.toml  README.md  mondrians.html  mondrians_bg.wasm  worker.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust-gh-pages.yml
scripts/: deploy.sh
src/: lib.rs  main.rs
static/: index.html  main.js  mondrians.html  style.css  worker.js
