[package]
name = "mondrians"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generates uniquely deterministic images, in the style of Piet Mondrian"
readme = "README.md"
repository = "https://github.com/albertlarsan68/mondrians"
keywords = ["mondrian", "wasm", "web"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = ["no-rng"] }
base64 = { version = "0.21.7", default-features = false, features = ["std"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }

[lib]
crate-type = ["cdylib", "rlib"]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.89"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
